#839: Update GetGeoCodeType and GetGeoCodeTypes UCs